--- a/Main/style.css
+++ b/Main/style.css
@@ -25,7 +25,7 @@ h1 {
 nav {
     border: 2px solid #ffffff;
     border-radius: 8px;
-    padding: 17px;
+    padding: 25px;
     background-color: #ffffff5c;
     margin-right: 80px;
     gap: 1rem;
@@ -37,11 +37,15 @@ nav a {
     color: #000000;
     text-decoration: none;
     font-weight: bold;
+
 }
 
 nav a:hover {
+    text-shadow: 0 0 10px #000000;
     color: #ffae00;
     text-decoration: underline;
+    font-weight: bold;
+    font-size: 1.4rem;
 }
 
 .calculator {
@@ -151,6 +155,22 @@ p {
     border-radius: 6px;
     padding: 16px;
     margin-left: 21%;
+    width: 215px;
+}
+
+#prompt {
+    background-color: #ffae00;
+    border: 2px solid #000000;
+    border-radius: 6px;
+    padding: 14px;
+    margin-left: 27%;
+    width: 200px;
+    margin-bottom: 19px;
+    font-weight: bold;
+}
+
+#prompt:hover {
+    background-color: #ffffff;
 }
 
 #Check {
@@ -161,12 +181,14 @@ p {
     margin-left: 27%;
     margin-top: 10px;
     width: 200px;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
+    font-weight: bold;
 }
 
 #Check:hover {
     background-color: #ffffff;
 }
+
 
 #string {
     border: 2px solid #ffffff;
